fixed background in dark mode student profile page

--- a/navigateToPages/profile.css
+++ b/navigateToPages/profile.css
@@ -6,6 +6,9 @@
     height: 100%;
     width: 100%;
     background-image: url('../img/back.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .logged p{
